--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <P  class="sub">  Welcome to my page!</P>
             <a target="_blank" href="https://blog.naver.com/mo9riza/">블로그</a>
             <a target="_blank" href="https://www.youtube.com/channel/UCNou-JmCguByJ8TByqeLtKQ">유튜브</a>
-            <a target="_blank" href="https://www.instagram.com/mung010//">인스타그램</a>
+            <a target="_blank" href="https://www.instagram.com/mung010/">인스타그램</a>
             <a target="_blank" href="https://ddingdong.spartacodingclub.kr/">포트폴리오</a>
         </div>
        
